@@ -2,7 +2,7 @@
 # Kernel/GenericInterface/Operation/Ticket/TicketUpdate.pm - GenericInterface Ticket TicketUpdate operation backend
 # Copyright (C) 2001-2012 OTRS AG, http://otrs.org/
 # --
-# $Id: TicketUpdate.pm,v 1.2 2012/01/24 22:33:48 cr Exp $
+# $Id: TicketUpdate.pm,v 1.3 2012/02/13 21:35:45 cr Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -27,7 +27,7 @@ use Kernel::GenericInterface::Operation::Ticket::Common;
 use Kernel::System::VariableCheck qw(IsArrayRefWithData IsHashRefWithData IsStringWithData);
 
 use vars qw(@ISA $VERSION);
-$VERSION = qw($Revision: 1.2 $) [1];
+$VERSION = qw($Revision: 1.3 $) [1];
 
 =head1 NAME
 
@@ -1870,11 +1870,20 @@ sub _TicketUpdate {
             $From = $Article->{From};
         }
         elsif ( $Param{UserType} eq 'Customer' ) {
-            $From
-                = '"'
-                . $CustomerUserData{UserFirstname} . ' '
-                . $CustomerUserData{UserLastname} . '"'
-                . ' <' . $CustomerUserData{UserEmail} . '>';
+
+            # use data from customer user (if customer user is in database)
+            if ( IsHashRefWithData( \%CustomerUserData ) ) {
+                $From
+                    = '"'
+                    . $CustomerUserData{UserFirstname} . ' '
+                    . $CustomerUserData{UserLastname} . '"'
+                    . ' <' . $CustomerUserData{UserEmail} . '>';
+            }
+
+            # otherwise use customer user as sent from the request (it should be an email)
+            else {
+                $From = $Ticket->{CustomerUser};
+            }
         }
         else {
             my %UserData = $Self->{UserObject}->GetUserData(
@@ -2012,6 +2021,6 @@ did not receive this file, see L<http://www.gnu.org/licenses/agpl.txt>.
 
 =head1 VERSION
 
-$Revision: 1.2 $ $Date: 2012/01/24 22:33:48 $
+$Revision: 1.3 $ $Date: 2012/02/13 21:35:45 $
 
 =cut
